--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+asn1crypto==0.24.0
+cryptography==2.1.4
+idna==2.6
+Jinja2==2.11.1
+keyring==10.6.0
+keyrings.alt==3.0
+MarkupSafe==1.1.1
+pycrypto==2.6.1
 pydot==1.4.1
+pygobject==3.26.1
 pyparsing==2.4.6
+pyxdg==0.25
+SecretStorage==2.3.1
+six==1.11.0
