--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 asn1crypto==0.24.0
-cryptography==2.1.4
+cffi==1.14.0
+cryptography==2.3
 idna==2.6
 Jinja2==2.11.1
 keyring==10.6.0
 keyrings.alt==3.0
 MarkupSafe==1.1.1
+pycparser==2.20
 pycrypto==2.6.1
 pydot==1.4.1
 pygobject==3.26.1
 pyparsing==2.4.6
-pyxdg==0.25
+pyxdg==0.26
 SecretStorage==2.3.1
 six==1.11.0
