--- a/sandbox/node/package.json
+++ b/sandbox/node/package.json
@@ -4,6 +4,8 @@
   "description": "Sandbox for MPST Node targets",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node build/app.js",
     "test": "tsc --noEmit"
   },
   "author": "",
@@ -13,7 +15,7 @@
     "ws": "^7.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.4",
     "@types/node": "^13.1.8",
     "@types/ws": "^7.2.0"
   }
