--- a/sandbox/node/package.json
+++ b/sandbox/node/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/app.js",
+    "devStart": "ts-node app.ts",
     "test": "tsc --noEmit"
   },
   "author": "",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "@types/express": "^4.17.4",
     "@types/node": "^13.1.8",
-    "@types/ws": "^7.2.0"
+    "@types/ws": "^7.2.0",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
