--- a/examples/CompactCalculator/server/package.json
+++ b/examples/CompactCalculator/server/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/uuid": "^8.0.1",
     "@types/ws": "^7.2.4",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "uuid": "^8.3.0",
     "ws": "^7.2.3"
   }
 }
