--- a/perf-benchmarks/simple_pingpong/tsconfig.json
+++ b/perf-benchmarks/simple_pingpong/tsconfig.json
@@ -64,6 +64,6 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "clients"
+    "build", "clients"
   ]
 }
