--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,16 @@ services:
       - "127.0.0.1:8080:8080"
       - "127.0.0.1:8888:8888"
 
+  test:
+    build:
+      context: .
+    hostname: dev
+    volumes:
+      - ./codegen:/home/dev/codegen
+      - ./web-sandbox:/home/dev/web-sandbox
+    command: 
+      python3.8 -m codegen.tests.system
+
 volumes:
   case-studies:
   codegen:
